--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -8,15 +8,6 @@
 nav {
   padding: 0.5rem 0;
 
-  .navbar-brand {
-    .aviabird-logo {
-      height: 34px;
-      width: 35px;
-      background-position: -0px -21px;
-      background-size: 350%;
-    }
-  }
-
   .navbar-brand, .navbar-toggler  {
     z-index: 2000;
   }
